# dbtcore-bigquery

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  dbt_project.yml  exemplo.env  package-lock.yml  packages.yml  pyproject.toml
analytics/: .user.yml  dbt_project.yml  profiles.yml
data/: raw_stores.csv
dbt_packages/dbt_date/: dbt_project.yml
dbt_packages/dbt_date/integration_tests/models/: test_dates.yml
dbt_packages/dbt_date/macros/calendar_date/: last_month.sql  last_week.sql  n_days_away.sql  next_month.sql  next_week.sql
dbt_packages/dbt_utils/: dev-requirements.txt
dbt_packages/dbt_utils/macros/sql/: star.sql
dbt_packages/dbt_utils/tests/: conftest.py
docs/: homepage.md  macro.md
macros/: cents_to_dollars.sql  generate_schema_name.sql
models/marts/: calendar_table.sql  customers.yml  metricflow_time_spine.sql  order_items.yml  orders.yml  select_all_except.sql
models/staging/: __sources.yml  stg_customers.md  stg_locations.md  stg_order_items.md  stg_order_items.yml  stg_orders.md  stg_orders.sql  stg_orders.yml  stg_orders_macro.sql  stg_products.md  stg_supplies.md  stg_supplies.yml
snapshots/: stores_snapshot.sql
